k8s/base/shared/redis-service-pvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-primary
  namespace: default
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  type: ClusterIP
