k8s/base/shared/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: saas-rh
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
