k8s/base/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-rh-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "saas-rh"
    alb.ingress.kubernetes.io/tags: Environment=staging,Project=saas-rh
    alb.ingress.kubernetes.io/healthcheck-path: "/health"
    external-dns.alpha.kubernetes.io/hostname: "*.humanosisu.com"
spec:
  rules:
  - host: app.humanosisu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: asistencia
            port:
              number: 80
  - host: api.humanosisu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nomina
            port:
              number: 80
